sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:3: error: not found: value getNombresValeurs
  for (i<- 0 to getNombresValeurs) {
                ^AlgInsertionSort:4: error: not found: type int
    var v:int = getValeur(i);
          ^AlgInsertionSort:5: error: not found: type int
    var a:int = 0
          ^