sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<- 0 to getNombresValeurs) {
    var v:int = getValeur(i);
    var a:int = 0
    for (j<- i-1 to 0 by -1){
      if (!plusPetitQue(j,v)){
        copie(j,i);
        a=j
      }
    }
    setValeur(v,a)
  }
}